@@ -18,16 +18,24 @@ class TestGemCommandsPristineCommand < RubyGemTestCase
 
     install_gem a
 
+    foo_path = File.join @gemhome, 'gems', a.full_name, 'bin', 'foo'
+
+    File.open foo_path, 'w' do |io|
+      io.puts 'I changed it!'
+    end
+
     @cmd.options[:args] = %w[a]
 
     use_ui @ui do
       @cmd.execute
     end
 
+    assert_equal "#!/usr/bin/ruby\n", File.read(foo_path), foo_path
+
     out = @ui.output.split "\n"
 
     assert_equal "Restoring gem(s) to pristine condition...", out.shift
-    assert_equal "#{a.full_name} is in pristine condition", out.shift
+    assert_equal "Restored #{a.full_name}", out.shift
     assert out.empty?, out.inspect
   end
 
@@ -40,7 +48,7 @@ class TestGemCommandsPristineCommand < RubyGemTestCase
 
     install_gem a
 
-    gem_bin = File.join @gemhome, 'gems', "#{a.full_name}", 'bin', 'foo'
+    gem_bin = File.join @gemhome, 'gems', a.full_name, 'bin', 'foo'
 
     FileUtils.rm gem_bin
 
@@ -50,11 +58,12 @@ class TestGemCommandsPristineCommand < RubyGemTestCase
       @cmd.execute
     end
 
+    assert File.exist?(gem_bin)
+
     out = @ui.output.split "\n"
 
     assert_equal "Restoring gem(s) to pristine condition...", out.shift
-    assert_equal "Restoring 1 file to #{a.full_name}...", out.shift
-    assert_equal "  #{gem_bin}", out.shift
+    assert_equal "Restored #{a.full_name}", out.shift
     assert out.empty?, out.inspect
   end
 
