@@ -315,6 +315,29 @@ load 'my_exec'
     #assert_no_match %r|generated by RubyGems|, wrapper
   end
 
+  def test_generate_bin_script_wrappers
+    @installer.wrappers = true
+    util_make_exec
+    @installer.gem_dir = util_gem_dir
+    installed_exec = File.join(util_inst_bindir, "my_exec")
+
+    real_exec = File.join util_gem_dir, 'bin', 'my_exec'
+
+    # fake --no-wrappers for previous install
+    FileUtils.mkdir_p File.dirname(installed_exec)
+    FileUtils.ln_s real_exec, installed_exec
+
+    @installer.generate_bin
+    assert_equal true, File.directory?(util_inst_bindir)
+    assert_equal true, File.exist?(installed_exec)
+    assert_equal(0100755, File.stat(installed_exec).mode) unless win_platform?
+
+    assert_match %r|generated by RubyGems|, File.read(installed_exec)
+
+    assert_no_match %r|generated by RubyGems|, File.read(real_exec),
+                    'real executable overwritten'
+  end
+
   def test_generate_bin_symlink
     return if win_platform? #Windows FS do not support symlinks
 
